tests/syntax-error/init-list-mismatch.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g init-list-mismatch.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: init-list-mismatch.silly:8:7: error: For variable 'w', more initializers (3) specified than number of elements (1).
// CHECK:     8 | INT32 w {1,2,3};
// CHECK:       |       ^


INT32 w {1,2,3};
